--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.6
+- Changed settings for containers and forms to let all UI components to automatically scale on different DPI settings. Removed the restriction to resize the
+  add-in's pane, so in case a different DPI setting is used and the fonts look too big, the add-in pane can be resized to let users see contents as best as
+  possible. (MySQL Bug #71389, Bug #18099454 - MYSQL FOR EXCEL SIDEBAR NOT DISPLAYING CORRECTLY)
 - Tweaked the code that runs when closing an Excel workbook to disable events for Excel 2007 only while the workbook is being saved. This fixes a problem
   where MySQL for Excel offered to save an unsaved Excel workbook when closing it, but the save was not happening causing all unsaved changes to be lost.
   (MySQL Bug:  78910, Bug #22081313 - EXCEL ADD-IN DOES NOT SAVE DATA WHEN EXCEL IS CLOSED)
