MYSQLEXCEL-261 - APPEND EXCEL DATA TABLE THROW AN OBJECT REFERENCE ERROR WITH SPECIFIC SCENARIO
- Added code to clear the selected nodes in the SelectedNodes property setter, ClearChildNodes and ClearHeaderNodes methods. (source\Controls\MySqlListView.cs)
- Added calls to the RefreshActionLabelsEnabledStatus to enable/disable action labels on the SetConnection method (after a schema is opened), and the ImportDataHotLabel_Click and ImportMultipleDbObjects methods (at the end of import operations). (source\PanelsDBObjectSelectionPanel.cs)
- Added code to the SkipSelectedDataContentsDetection property setter to update the selected data property when the property is set to false (i.e. after an operation modified the contents of the active Worksheet). (source\ThisAddIn.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.6
+- Fixed the detection of contents in the current Excel active cell after importing data and after loading database obects when a schema is opened.
+  (Bug #22372915 - APPEND EXCEL DATA TABLE THROW AN OBJECT REFERENCE ERROR WITH SPECIFIC SCENARIO)
 - Changed settings for containers and forms to let all UI components to automatically scale on different DPI settings. Removed the restriction to resize the
   add-in's pane, so in case a different DPI setting is used and the fonts look too big, the add-in pane can be resized to let users see contents as best as
   possible. (MySQL Bug #71389, Bug #18099454 - MYSQL FOR EXCEL SIDEBAR NOT DISPLAYING CORRECTLY)
