MYSQLEXCEL-297 - Fix build errors after updating to the latest MySQL.Utility
- Upgraded to the latest MySQL.Utility and MySql.Data libraries. (source\libraries\MySQL.Utility.dll, source\libraries\MySql.Data.dll)
- Updated namespaces to accommodate for namespace changes in the utility library. (*.cs)
- Updated parameters in TruncateString extension method to accommodate for signature changes. (source\Classes\MySqlListViewNode.cs)
- Replaced calls of MakeGrayscale extension method with new ToGrayscale one. (source\Controls\HotLabel.cs, source\Controls\MySqlListView.cs)
- Replaced Connection.GetSchemaCollection with Connection.GetSchemaInformation method calls. (source\Classes\DbTable.cs, source\Classes\MySQLDataUtilities.cs
- Updated  MySqlForExcelSettings class to implement new properties added to the CustomSettingsProvider abstract clas. (source\Classes\MySQLForExcelSettings.cs)
- Replaced all calls to MiscUtilities.ShowCustomizedErrorDialog with a single call to MySqlSourceTrace.WriteAppErrorToLog which now also can display a formatted and standarized error message besides outputting the error to the log. Adjusted parameters for MySqlSourceTrace.WriteAppErrorToLog calls to accommodate for new signature. (source\Classes\DbProcedure.cs, source\Classes\DbView.cs, source\Classes\ExcelUtilities.cs, source\Classes\ImportConnectionInfo.cs, source\Classes\MiscUtilities.cs, source\Classes\MySQLDataColumn.cs, source\Classes\MySQLDataTable.cs, source\Classes\MySQLDataUtilities.cs, source\Classes\MySqlDataRow.cs, source\Classes\MySqlStatement.cs, source\Classes\TempRange.cs, source\Controls\MySqlListView.cs, source\Controls\MySqlRibbon.cs, source\Forms\EditDataDialog.cs, source\Forms\ExportDataForm.cs, source\Forms\ImportTableViewForm.cs, source\Forms\MySqlScriptDialog.cs, source\Forms\PreviewTableViewDialog.cs, source\Panels\DBObjectSelectionPanel.cs,
source\Panels\SchemaSelectionPanel.cs, source\ThisAddIn.cs)
- Added a resource string for a hardcoded error text. (source\Prop

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1110,4 +1110,10 @@ In order to avoid receiving this error message each time the Excel table is refr
   <data name="SplashScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SplashScreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="QueryChangedTimerTickNoValidControlFocusError" xml:space="preserve">
+    <value>QueryChangedTimer's Tick event fired but no valid control had focus.</value>
+  </data>
+  <data name="CustomTaskPaneGetOrCreateError" xml:space="preserve">
+    <value>Could not get or create a custom task pane for the active Excel window. Using Excel version {0}.</value>
+  </data>
 </root>
