--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.7
+- Fixed the code that translates datetime values being exported/appended to a MySQL table depending on the target column data type. Excel values are always
+  stored internally as a number corresponding to a datetime type, MySQL for Excel now correctly converts the value to a string representation based on the
+  target type (DATE or DATETIME). (MySQL Bug:  80079, Bug #22585674 - IMPROPER HANDLING OF EXCEL DATE PREVENTS EXPORTING)
+- Added code to differentiate properly a DATE and a DATETIME MySQL data column, this impacts the handling for date and datetime values for Import, Export,
+  Append and Edit data operations. (MySQL Bug:  80139, Bug #22627266 - IMPORT IS INTERRUPTED DUE TO DATE/TIME VALUE)
 - Enhanced the logic that migrates stored MySQL connections to the MySQL Workbench connections.xml file. In previous versions the migration was offered
   and if not done at that moment, the dialog to migrate was shown every time MySQL for Excel was run again, but there was no way to choose to remain storing
   MySQL connections in the MySQL for Excel configuration folder instead of merging them with the Workbench ones. Now the connections migration dialog offers
