--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,11 @@
 1.3.7
+- Enhanced the way parameter values are handled in the Import Procedure Data dialog, so that numeric values can be blanked out and treated as null values.
+  (MySQL Bug #81417, Bug #23281495 - EXCEL ADDIN - CANNOT PASS NULL PARAMETER TO STORED PROC TO IMPORT DATA)
 - Fixed the code that translates datetime values being inserted or updated into a MySQL table depending on the target column data type. Excel values are
   always stored internally as a number corresponding to a datetime type, MySQL for Excel now correctly converts the value to a string representation based
-  on the target type (DATE or DATETIME). (MySQL Bug:  80079, Bug #22585674 - IMPROPER HANDLING OF EXCEL DATE PREVENTS EXPORTING) 
+  on the target type (DATE or DATETIME). (MySQL Bug #80079, Bug #22585674 - IMPROPER HANDLING OF EXCEL DATE PREVENTS EXPORTING)
 - Added code to differentiate properly a DATE and a DATETIME MySQL data column, this impacts the handling for date and datetime values for Import, Export,
-  Append and Edit data operations. (MySQL Bug:  80139, Bug #22627266 - IMPORT IS INTERRUPTED DUE TO DATE/TIME VALUE)
+  Append and Edit data operations. (MySQL Bug  #80139, Bug #22627266 - IMPORT IS INTERRUPTED DUE TO DATE/TIME VALUE)
 - Enhanced the logic that migrates stored MySQL connections to the MySQL Workbench connections.xml file. In previous versions the migration was offered
   and if not done at that moment, the dialog to migrate was shown every time MySQL for Excel was run again, but there was no way to choose to remain storing
   MySQL connections in the MySQL for Excel configuration folder instead of merging them with the Workbench ones. Now the connections migration dialog offers
@@ -23,7 +25,7 @@
   possible. (MySQL Bug #71389, Bug #18099454 - MYSQL FOR EXCEL SIDEBAR NOT DISPLAYING CORRECTLY)
 - Tweaked the code that runs when closing an Excel workbook to disable events for Excel 2007 only while the workbook is being saved. This fixes a problem
   where MySQL for Excel offered to save an unsaved Excel workbook when closing it, but the save was not happening causing all unsaved changes to be lost.
-  (MySQL Bug:  78910, Bug #22081313 - EXCEL ADD-IN DOES NOT SAVE DATA WHEN EXCEL IS CLOSED)
+  (MySQL Bug #78910, Bug #22081313 - EXCEL ADD-IN DOES NOT SAVE DATA WHEN EXCEL IS CLOSED)
 - Fixed code for data import operations done to an Excel range so that numeric data stored in text columns is correctly formatted by Excel as text and not as
   the "General" format that automatically formats cells as numbers when the data is stored in a text object. This fixes the problem seen in Edit Data operations
   where text columns were being formated as numbers and leading zeros stripped from them. Added new advanced options for Import Data operations to define the
