MYSQLEXCEL-262 - [IMPORT] WRONG COLUMN NAME IMPORTING DATA WITHOUT COLUMN NAMES AS HEADERS
- Modified code in the BindMySqlDataTable method to always change the Name value of a ListColumn object, but accessing the collection of ListColumns in a reversed way. The original problem was that when the ListObject was created without having headers, the first column is named ExternalData_n, and the rest of the columns Column1, Column2, and so on. When we tried to rename the first column as Column1, the Excel Interop code validated it was not a unique name and disregarded the change. (source\Classes\ImportConnectionInfo.cs)
- Added the OrdinalColumnName property, used to return always a name of Column1, Column2, etc. (source\Classes\MySQLDataColumn.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.7
+- Fixed the way column names in a bound Excel table (ListObject) are overriden, names need to be given traversing the ListObject's columns in a reversed
+  way, otherwise the first column that is to be named as "Column1" can't be named since the 2nd column already has that default name.
+  (Bug #22373140 - [IMPORT] WRONG COLUMN NAME IMPORTING DATA WITHOUT COLUMN NAMES AS HEADERS)
 - There seems to be a bug in Microsoft's Excel interop code to unprotect Worksheets in the BeforeSave event when the save is done programatically (through
   the Workbook.Save method). This bug seems to be present in VBA as well, and other developers in the Internet report the same problem. The problem happens
   when the Workbook is closed and needs to be saved, the Worksheets with an Edit Data session are not unprotected before the Workbook is saved, so the next
