MYSQLEXCEL-282 - TINYINT INCORRECTLY MAPPED TO BOOLEAN
- Updated to the latest MySQL.Utility library that contains the new MySqlWorkbenchConnection.TreatTinyIntAsBoolean property. (source\libraries\MySQL.Utility.dll)
- Added the new MayBeBool property that checks if a data type is a tinyint(1) or bit or bit(1) and may hold boolean values. The IsBool property now checks only if the type is indeed a boolean one. The intention is to separate the cases where a data type is indeed a boolean so values are processed as such, and when a data type may be a boolean, we attempt to process values as either boolean or numeric. (source\Classes\MySqlDataType.cs)
- Added code to the DetectMySqlDataType to handle when a data type is or may be a boolean. Added code to the GetInsertingValueForType method to convert a raw object value to a boolean if IsBool, but attempt to convert it to boolean if MayBeBool, and if the conversion is not successful, fallback to a numeric conversion. (source\Classes\MySQLDataColumn.cs)
- Added the IsBooleanValue extension method, that checks if a string value can be stored in a MySQL boolean column. (source\Classes\MiscUtilities.cs)
- Added the SetAdditionalConnectionProperties extension method to set properties to a MySqlWorkbenchConnection that are not persisted in disk and that are specific to MySQL for Excel. (source\Classes\MySQLDataUtilities.cs, source\Panels\WelcomePanel.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.7
+- Fixed the way tinyint(1), bit and bit(1) values are treated by MySQL for Excel. Before values mapped to columns of those aforementioned data types were
+  assumed to be boolean values and always converted to true and false representation (1 and 0 values in Excel). Now tinyint(1) is treated as a type that
+  can be either boolean or numeric for Export and Edit Data operations (since BOOL/BOOLEAN are actually synonyms of TINYINT(1), but not viceversa). For
+  Import Data operations, connections are now using the TreatTinyAsBoolean=false in the connection string for all connections opened by MySQL for Excel.
+  (MySQL Bug #80880, Bug #23022665 - TINYINT INCORRECTLY MAPPED TO BOOLEAN)
 - Fixed the way column names in a bound Excel table (ListObject) are overriden, names need to be given traversing the ListObject's columns in a reversed
   way, otherwise the first column that is to be named as "Column1" can't be named since the 2nd column already has that default name.
   (Bug #22373140 - [IMPORT] WRONG COLUMN NAME IMPORTING DATA WITHOUT COLUMN NAMES AS HEADERS)
